# SmartCopy

./: DerivedInstances.hs  JSON.hs  JSONTypes.hs  ManualInstances.hs  SmartCopy.hs  TestTypes.hs
SmartCopy/: SmartCopy.cabal  smartcopy.cabal
SmartCopy/Benchmarks/: AesonBenchmarkParse.hs  AesonBenchmarkSerialize.hs  SafeCopyBenchmarkParse.hs  SafeCopyBenchmarkParseGeneric.hs  SafeCopyBenchmarkSerialize.hs  SafeCopyBenchmarkSerializeGeneric.hs  SmartCopyBenchmarkGenericParse.hs  SmartCopyBenchmarkGenericSerialize.hs
SmartCopy/Benchmarks/html/: AesonParse.html  AesonSerialize.html  SafeCopyParse.html  SafeCopySerialize.html  SmartCopyGenParse.html  SmartCopyGenSerialize.html
SmartCopy/Tests/: TestInstances.hs  TestInstancesDerived.hs  TestInstancesMigrate.hs  TestOutput.hs  Tests.hs
SmartCopy/src/Data/: SmartCopy.hs
SmartCopy/src/Data/SmartCopy/: Generic.hs  Instances.hs  MonadTypesInstances.hs  SmartCopy.hs  THTest.hs
SmartCopy/src/Data/SmartCopy/Formats/: JSON.hs  SafeCopy.hs  String.hs  XmlLike.hs
SmartCopyCurrent/: Instances.hs  JSON.hs  MonadTypesInstances.hs  SafeCopy.hs  SafeCopyBenchmark.prof  SmartBinary.hs  SmartCopy.hs  SmartSafeCopy.hs  StringFormat.hs  TestInstances.hs  TestInstancesMigrate.hs  Tests.hs  XmlLikeFormat.hs
SmartCopyCurrent/Benchmarks/: AesonBenchmark.hs  AesonBenchmarkParse.hs  AesonBenchmarkSerialize.hs  SafeCopyBenchmark.hs  SafeCopyBenchmarkParse.hs  aesonParse.html  aesonSerialize.html  safeCopyParse.html  safeCopySerialize.html
SmartCopyCurrent/SmartCopy/: .Generic.hs.swp  .SmartCopy.hs.swp  Generic.hs  Instances.hs  MonadTypesInstances.hs  SmartCopy.hs
SmartCopyCurrent/SmartCopy/Formats/: JSON.hs  SafeCopy.hs  StringFormat.hs  XmlLikeFormat.hs
SmartCopyCurrent/Tests/: .TestInstances.hs.swp  .TestInstancesDerived.hs.swp  .Tests.hs.swp  TestInstances.hs  TestInstancesDerived.hs  TestInstancesMigrate.hs  TestOutput.hs  Tests.hs
SmartCopyCurrent/src/Benchmarks/: SafeCopyBenchmarkSerialize.hs
SmartCopyCurrent/src/SmartCopy/: Generic.hs  Instances.hs  MonadTypesInstances.hs  SmartCopy.hs
SmartCopyCurrent/src/SmartCopy/Formats/: JSON.hs  SafeCopy.hs  StringFormat.hs  XmlLikeFormat.hs
SmartCopyCurrent/src/Tests/: TestInstances.hs  TestInstancesDerived.hs  TestInstancesMigrate.hs  TestOutput.hs  Tests.hs
SmartCopyMkP/SmartCopy/: Generic.hs  Instances.hs  MonadTypesInstances.hs  SmartCopy.hs
SmartCopyOld/: DerivedInstancesAeson.hs  SmartCopy.hs
